// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/Tooltip/hoc should pass config to the tooltip component 1`] = `
<div
  className="component"
>
  <div
    title="child"
  >
    {}
  </div>
  <div
    className="tooltip tooltip left"
    style={Object {}}
  >
    TEXT
  </div>
</div>
`;

exports[`common/Tooltip/hoc should pass props to the wrapped component 1`] = `
<div
  className="component"
>
  <div
    title="child"
  >
    {"prop":"a prop","and":"an other"}
  </div>
  <div
    className="tooltip"
    style={Object {}}
  >
    TEXT
  </div>
</div>
`;
